Made possible to extend simple functions, which are not part of the classy system

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
         "karma-chrome-launcher": "^0.1.3"
     },
     "scripts": {
-        "build"  : "browserify src/index.js -s ZippyClass -o dist/ZippyClass.js",
-        "watch"  : "watchify src/index.js -s ZippyClass -o dist/ZippyClass.js",
+        "build"  : "browserify src/index.js -s classy -o dist/classy.js",
+        "watch"  : "watchify src/index.js -s classy -o dist/ZippyClass.js",
         "dev"    : "npm run build | npm run watch",
         "test"   : "karma start",
         "server" : "python -m SimpleHTTPServer"
