--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-    "name"    : "zippy-class",
-    "version" : "1.0.0",
-    "private" : true,
+    "name"    : "classy",
+    "version" : "1.1.1",
     "devDependencies": {
         "browserify": "^3.44.2",
         "watchify": "^0.8.2",
@@ -10,6 +9,7 @@
         "karma-chrome-launcher": "^0.1.3"
     },
     "scripts": {
+        "preinstall": "npm install -g browserify",
         "build"  : "browserify src/index.js -s classy -o dist/classy.js",
         "watch"  : "watchify src/index.js -s classy -o dist/ZippyClass.js",
         "dev"    : "npm run build | npm run watch",
