--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name"    : "classy",
-    "version" : "1.1.2",
+    "version" : "1.1.3",
     "devDependencies": {
         "browserify": "^3.44.2",
         "watchify": "^0.8.2",
@@ -10,7 +10,8 @@
     },
     "scripts": {
         "preinstall": "npm install -g browserify",
-        "build"  : "browserify src/index.js -s classy -o dist/classy.js",
+        "build"  : "browserify src/index.js -o dist/classy.js",
+        "build-browser"  : "browserify src/index.js -s classy -o dist/classy-browser.js",
         "watch"  : "watchify src/index.js -s classy -o dist/ZippyClass.js",
         "dev"    : "npm run build | npm run watch",
         "test"   : "karma start",
