--- a/package.json
+++ b/package.json
@@ -1,21 +1,47 @@
 {
-    "name"    : "classy",
-    "version" : "1.1.3",
-    "devDependencies": {
-        "browserify": "^3.44.2",
-        "watchify": "^0.8.2",
-        "karma": "^0.12.14",
-        "karma-jasmine": "^0.1.5",
-        "karma-chrome-launcher": "^0.1.3"
-    },
-    "scripts": {
-        "preinstall": "npm install -g browserify",
-        "build"  : "browserify src/index.js -o dist/classy.js",
-        "build-browser"  : "browserify src/index.js -s classy -o dist/classy-browser.js",
-        "watch"  : "watchify src/index.js -s classy -o dist/ZippyClass.js",
-        "dev"    : "npm run build | npm run watch",
-        "test"   : "karma start",
-        "server" : "python -m SimpleHTTPServer"
-    },
-    "main": "index.js"
+  "name": "classy",
+  "version": "1.1.5",
+  "devDependencies": {
+    "browserify": "^3.44.2",
+    "watchify": "^0.8.2",
+    "karma": "^0.12.14",
+    "karma-jasmine": "^0.1.5",
+    "karma-chrome-launcher": "^0.1.3"
+  },
+  "scripts": {
+    "build": "browserify src/index.js -o dist/classy.js",
+    "build-browser": "browserify src/index.js -s classy -o dist/classy-browser.js",
+    "watch": "watchify src/index.js -s classy -o dist/ZippyClass.js",
+    "dev": "npm run build | npm run watch",
+    "test": "karma start",
+    "server": "python -m SimpleHTTPServer"
+  },
+  "main": "index.js",
+  "description": "Classy - Classes for JavaScript\r ============================",
+  "directories": {
+    "test": "test"
+  },
+  "dependencies": {
+    "browserify": "~3.44.2",
+    "karma": "~0.12.14",
+    "karma-jasmine": "~0.1.5",
+    "karma-chrome-launcher": "~0.1.3",
+    "watchify": "~0.8.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zippyui/classy.git"
+  },
+  "keywords": [
+    "class",
+    "super",
+    "method",
+    "classes"
+  ],
+  "author": "Radu Brehar",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/zippyui/classy/issues"
+  },
+  "homepage": "https://github.com/zippyui/classy"
 }
