--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "classy",
-  "version": "1.1.5",
+  "version": "1.2.0",
   "devDependencies": {
     "browserify": "^3.44.2",
     "watchify": "^0.8.2",
@@ -14,9 +14,9 @@
     "watch": "watchify src/index.js -s classy -o dist/ZippyClass.js",
     "dev": "npm run build | npm run watch",
     "test": "karma start",
-    "server": "python -m SimpleHTTPServer"
+    "start": "python -m SimpleHTTPServer"
   },
-  "main": "index.js",
+  "main": "dist/classy.js",
   "description": "Classy - Classes for JavaScript\r ============================",
   "directories": {
     "test": "test"
