--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
     "karma-chrome-launcher": "^0.1.3"
   },
   "scripts": {
-    "build": "browserify src/index.js -o dist/classy.js",
-    "build-browser": "browserify src/index.js -s classy -o dist/classy-browser.js",
-    "watch": "watchify src/index.js -s classy -o dist/ZippyClass.js",
+    "build": "browserify src/index.js -s classy -o dist/classy.js",
+    "watch": "watchify src/index.js -s classy -o dist/classy.js",
     "dev": "npm run build | npm run watch",
     "test": "karma start",
     "start": "python -m SimpleHTTPServer"
   },
-  "main": "dist/classy.js",
+  "main": "src/index.js",
   "description": "Classy - Classes for JavaScript\r ============================",
   "directories": {
     "test": "test"
