--- a/package.json
+++ b/package.json
@@ -1,13 +1,6 @@
 {
   "name": "classy",
-  "version": "1.2.4",
-  "devDependencies": {
-    "browserify": "^3.44.2",
-    "watchify": "^0.8.2",
-    "karma": "^0.12.14",
-    "karma-jasmine": "^0.1.5",
-    "karma-chrome-launcher": "^0.1.3"
-  },
+  "version": "1.2.5",
   "scripts": {
     "build": "browserify src/index.js -s classy -o dist/classy.js",
     "watch": "watchify src/index.js -s classy -o dist/classy.js",
@@ -20,12 +13,12 @@
   "directories": {
     "test": "test"
   },
-  "dependencies": {
-    "browserify": "~3.44.2",
+  "devDependencies": {
+    "browserify": "^3.44.2",
+    "watchify": "~0.8.2",
     "karma": "~0.12.14",
     "karma-jasmine": "~0.1.5",
-    "karma-chrome-launcher": "~0.1.3",
-    "watchify": "~0.8.2"
+    "karma-chrome-launcher": "~0.1.3"
   },
   "repository": {
     "type": "git",
