--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "python -m SimpleHTTPServer"
   },
   "main": "src/index.js",
-  "description": "Classy - Classes for JavaScript\r ============================",
+  "description": "Classy - Classes for JavaScript",
   "directories": {
     "test": "test"
   },
@@ -43,7 +43,7 @@
   },
   "homepage": "https://github.com/classyjs/classy",
   "dependencies": {
-    "newify": "~1.1.3",
-    "copy-utils": "~0.1.1"
+    "newify": "~1.1.9",
+    "copy-utils": "~1.0.0"
   }
 }
