--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "classy",
   "version": "1.4.8",
   "scripts": {
-    "build": "browserify src/index.js -s classy -o dist/classy.js",
+    "build": "browserify src/index.js -s classy o-np dist/classy.js",
     "watch": "watchify src/index.js -s classy -o dist/classy.js",
     "dev": "npm run build | npm run watch",
     "test": "karma start",
